// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultView should render a Result View with RTL support 1`] = `
<ResultView
  alignEnd={true}
  alignment="left"
  hasComment={true}
  hasDocument={true}
  isModified={false}
  isPadded={true}
  isTruncated={false}
  results={
    Array [
      Object {
        "color": "#0053e6",
        "icon": <IconLow
          id="Layer_1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        />,
        "unit": "ml",
        "value": 503456789,
      },
    ]
  }
  timeDisplay={null}
/>
`;

exports[`ResultView should render a Result View with no time display 1`] = `
<ResultView
  alignment="left"
  hasComment={true}
  hasDocument={true}
  isModified={false}
  isPadded={true}
  isTruncated={true}
  results={
    Array [
      Object {
        "color": "#0053e6",
        "icon": <IconLow
          id="Layer_1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        />,
        "unit": "ml",
        "value": 503456789,
      },
    ]
  }
  timeDisplay={null}
/>
`;

exports[`ResultView should render a Result View with separator 1`] = `
<ResultView
  alignment="left"
  hasComment={true}
  hasDocument={true}
  isModified={false}
  isPadded={true}
  isTruncated={false}
  results={
    Array [
      Object {
        "unit": "mmHg",
        "value": 120,
      },
      Object {
        "unit": "mmHg",
        "value": 80,
      },
    ]
  }
  timeDisplay={null}
/>
`;

exports[`ResultView should render a Result View with truncation by default 1`] = `
<ResultView
  alignment="left"
  hasComment={true}
  hasDocument={true}
  isModified={false}
  isPadded={true}
  isTruncated={true}
  results={
    Array [
      Object {
        "color": "#0053e6",
        "icon": <IconLow
          id="Layer_1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        />,
        "unit": "ml",
        "value": 503456789,
      },
    ]
  }
  timeDisplay={null}
/>
`;

exports[`ResultView should render a Result View without truncation 1`] = `
<ResultView
  alignment="left"
  hasComment={true}
  hasDocument={true}
  isModified={false}
  isPadded={true}
  isTruncated={false}
  results={
    Array [
      Object {
        "color": "#0053e6",
        "icon": <IconLow
          id="Layer_1"
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        />,
        "unit": "ml",
        "value": 503456789,
      },
    ]
  }
  timeDisplay={null}
/>
`;

exports[`ResultView should render a default component 1`] = `
<ResultView
  alignment="left"
  hasComment={false}
  hasDocument={false}
  isModified={false}
  isPadded={false}
  isTruncated={true}
  results={Array []}
  timeDisplay={null}
/>
`;
